# Performance-Explorer

./: README.md  pyproject.toml
src/: best_perf.py  main.py  perf_plot.py  segment_statistics.py  speedup_versus.py
