[tool.poetry]
name = "performance-explorer"
version = "0.1.0"
description = "show performance plot"
authors = ["genshen <genshenchu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
dash = "^2.9.2"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
